Name:                certificate
Version:             0.6.0
Description:
    Certificates and Key reader/writer
    .
    At the moment only X509 certificate and unencrypted private key are supported,
    but will include PGP certificate and pkcs8 private keys
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Certificates and Key Reader/Writer
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            http://github.com/vincenthz/hs-certificate
Cabal-Version:       >=1.6

Flag test
  Description:       Build unit test
  Default:           False

Flag executable
  Description:       Build the executable
  Default:           False

Library
  Build-Depends:     base >= 3 && < 7,
                     bytestring,
                     text >= 0.11,
                     mtl,
                     asn1-data >= 0.4.5 && < 0.5,
                     base64-bytestring
  Exposed-modules:   Data.Certificate.X509,
                     Data.Certificate.X509Cert,
                     Data.Certificate.PEM,
                     Data.Certificate.KeyDSA
                     Data.Certificate.KeyRSA
  Other-modules:     Data.Certificate.X509Internal
  ghc-options:       -Wall

Executable           certificate
  Main-Is:           Certificate.hs
  if flag(executable)
    Buildable:       True
    Build-depends:   cmdargs, text >= 0.11
  else
    Buildable:       False

executable           Tests
  Main-is:           Tests.hs
  if flag(test)
    Buildable:       True
    Build-Depends:   base >= 3 && < 7, directory, HUnit, QuickCheck >= 2, bytestring
  else
    Buildable:       False

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-certificate
