Name:                certificate
Version:             1.3.6
Description:
    Certificates and Key reader/writer
    .
    At the moment only X509 certificate and unencrypted private key are supported,
    but will include PGP certificate and pkcs8 private keys
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Certificates and Key Reader/Writer
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            http://github.com/vincenthz/hs-certificate
Cabal-Version:       >=1.6

Flag test
  Description:       Build unit test
  Default:           False

Flag executable
  Description:       Build the executable
  Default:           False

Library
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , mtl
                   , pem >= 0.1 && < 0.2
                   , asn1-data >= 0.7.1 && < 0.8.0
                   , crypto-pubkey-types >= 0.2 && < 0.3
                   , cryptohash
                   , containers
                   , directory
                   , filepath
                   , process
                   , time
  Exposed-modules:   Data.Certificate.X509
                     Data.Certificate.X509.Cert
                     Data.Certificate.X509.Ext
                     Data.Certificate.KeyDSA
                     Data.Certificate.KeyRSA
                     Data.CertificateStore
                     System.Certificate.X509
                     System.Certificate.X509.Unix
                     System.Certificate.X509.MacOS
  Other-modules:     Data.Certificate.X509.Internal
  ghc-options:       -Wall
  if os(windows)
     cpp-options: -DWINDOWS
     Build-Depends:  Win32
     Exposed-modules:  System.Certificate.X509.Win32
  if os(OSX)
     cpp-options: -DMACOSX

Executable           certificate
  Main-Is:           Certificate.hs
  if flag(executable)
    Buildable:       True
    Build-depends:   cmdargs
                   , text >= 0.11
                   , cryptohash
                   , crypto-pubkey
                   , directory
  else
    Buildable:       False

executable           Tests
  Main-is:           Tests.hs
  if flag(test)
    Buildable:       True
    Build-Depends:   base >= 3 && < 7, directory, HUnit, QuickCheck >= 2, bytestring
  else
    Buildable:       False

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-certificate
