Name:                x509-util
Version:             1.4.1
Description:         utility to parse, show, validate, sign and produce X509 certificates and chain.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Utility for X509 certificate and chain
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            http://github.com/vincenthz/hs-certificate
Cabal-Version:       >=1.6

Executable           x509-util
  Main-Is:           Certificate.hs
  hs-source-dirs:    src
  Buildable:         True
  Build-depends:     base >= 3 && < 5
                   , bytestring
                   , text >= 0.11
                   , crypto-pubkey-types
                   , x509
                   , x509-store
                   , x509-system
                   , x509-validation >= 1.4.3
                   , asn1-types >= 0.2
                   , asn1-encoding
                   , pem
                   , cryptohash
                   , crypto-pubkey
                   , directory

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-certificate
  subdir:   x509-util
