Name:                x509-util
version:             1.6.6
Description:         utility to parse, show, validate, sign and produce X509 certificates and chain.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Utility for X509 certificate and chain
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            http://github.com/vincenthz/hs-certificate
Cabal-Version:       >= 1.10

Executable           x509-util
  Default-Language:  Haskell2010
  Main-Is:           Certificate.hs
  hs-source-dirs:    src
  Buildable:         True
  Build-depends:     base >= 3 && < 5
                   , bytestring
                   , x509 >= 1.7.1
                   , x509-store
                   , x509-system
                   , x509-validation >= 1.6.3
                   , asn1-types >= 0.3
                   , asn1-encoding
                   , pem
                   , directory
                   , hourglass
                   , memory
                   , cryptonite

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-certificate
  subdir:   x509-util
