Name:                x509-validation
Version:             1.5.2
Description:         X.509 Certificate and CRL validation
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            X.509 Certificate and CRL validation
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            http://github.com/vincenthz/hs-certificate
Cabal-Version:       >=1.8

Library
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , byteable
                   , network
                   , mtl
                   , containers
                   , directory
                   , filepath
                   , process
                   , hourglass
                   , data-default-class
                   , pem >= 0.1 && < 0.3
                   , asn1-types >= 0.3 && < 0.4
                   , asn1-encoding >= 0.9 && < 0.10
                   , x509 >= 1.5.0 && < 1.6
                   , x509-store >= 1.5 && < 1.6
                   , crypto-pubkey >= 0.1.4 && < 0.3
                   , crypto-pubkey-types >= 0.4 && < 0.5
                   , cryptohash >= 0.9 && < 0.12
                   , publicsuffix >= 0 && < 1
                   , text >= 1 && < 1.3
  Exposed-modules:   Data.X509.Validation
  Other-modules:     Data.X509.Validation.Signature
                     Data.X509.Validation.Fingerprint
                     Data.X509.Validation.Cache
                     Data.X509.Validation.Types
  ghc-options:       -Wall

Test-Suite test-x509-validation
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , mtl
                   , tasty
                   , tasty-hunit
                   , hourglass
                   , asn1-types
                   , x509
                   , x509-validation
                   , crypto-pubkey-types
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-certificate
  subdir:   x509-validation
