Name:                x509-validation
Version:             1.6.4
Description:         X.509 Certificate and CRL validation
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            X.509 Certificate and CRL validation
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            http://github.com/vincenthz/hs-certificate
Cabal-Version:       >=1.6

Library
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , memory
                   , byteable
                   , mtl
                   , containers
                   , hourglass
                   , data-default-class
                   , pem >= 0.1 && < 0.3
                   , asn1-types >= 0.3 && < 0.4
                   , asn1-encoding >= 0.9 && < 0.10
                   , x509 >= 1.6.2 && < 1.7
                   , x509-store >= 1.6 && < 1.7
                   , cryptonite >= 0.8
  Exposed-modules:   Data.X509.Validation
  Other-modules:     Data.X509.Validation.Signature
                     Data.X509.Validation.Fingerprint
                     Data.X509.Validation.Cache
                     Data.X509.Validation.Types
  ghc-options:       -Wall

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-certificate
  subdir:   x509-validation
