Name:                x509
Version:             1.6.4
Description:         X509 reader and writer
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            X509 reader and writer
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            http://github.com/vincenthz/hs-certificate
Cabal-Version:       >=1.8

Library
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , memory
                   , mtl
                   , containers
                   , hourglass
                   , pem >= 0.1 && < 0.3
                   , asn1-types >= 0.3.1 && < 0.4
                   , asn1-encoding >= 0.9 && < 0.10
                   , asn1-parse >= 0.9.3 && < 0.10
                   , cryptonite
  Exposed-modules:   Data.X509
  Other-modules:     Data.X509.Internal
                     Data.X509.CertificateChain
                     Data.X509.AlgorithmIdentifier
                     Data.X509.DistinguishedName
                     Data.X509.Cert
                     Data.X509.PublicKey
                     Data.X509.PrivateKey
                     Data.X509.Ext
                     Data.X509.ExtensionRaw
                     Data.X509.CRL
                     Data.X509.OID
                     Data.X509.Signed
  ghc-options:       -Wall

Test-Suite test-x509
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , mtl
                   , tasty
                   , tasty-quickcheck
                   , hourglass
                   , asn1-types
                   , x509
                   , cryptonite
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-certificate
  subdir:   x509
